--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
   <uses-permission android:name="android.permission.INTERNET"/>
 
-  <application>
+  <application
+    android:allowBackup="true">
   </application>
 </manifest>
