--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   provided('com.squareup.dagger:dagger-compiler:1.2.2') {
     exclude group: 'com.google.guava'
   }
+  compile 'com.squareup.okhttp:okhttp:2.2.0'
   compile 'com.squareup.picasso:picasso:2.5.0'
   compile 'com.jakewharton.timber:timber:2.5.1'
   compile 'com.jakewharton:butterknife:6.1.0'
