--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
   compileSdkVersion 21
-  buildToolsVersion "21.1.2"
+  buildToolsVersion '21.1.2'
 
   defaultConfig {
     minSdkVersion 14
@@ -14,16 +14,18 @@ dependencies {
   compile 'com.android.support:appcompat-v7:21.0.3'
   compile 'com.android.support:recyclerview-v7:21.0.3'
   compile 'com.android.support:cardview-v7:21.0.3'
+  compile 'com.android.support:palette-v7:21.0.3'
   compile 'com.squareup.dagger:dagger:1.2.2'
   provided('com.squareup.dagger:dagger-compiler:1.2.2') {
     exclude group: 'com.google.guava'
   }
   compile 'com.squareup.okhttp:okhttp:2.2.0'
   compile 'com.squareup.picasso:picasso:2.5.0'
-  compile 'com.jakewharton.timber:timber:2.5.1'
+  compile 'com.jakewharton.timber:timber:2.7.1'
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'io.reactivex:rxandroid:0.24.0'
   compile 'io.reactivex:rxjava:1.0.7'
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'net.tribe7.seeds:seeds-primitives:16.0.1'
+  compile 'net.tribe7.seeds:seeds-strings:16.0.1'
 }
