--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,10 +11,10 @@ android {
 }
 
 dependencies {
+  compile 'com.google.android.gms:play-services-base:6.5.87'
   compile 'com.android.support:appcompat-v7:22.0.0'
   compile 'com.android.support:recyclerview-v7:22.0.0'
   compile 'com.android.support:cardview-v7:22.0.0'
-  compile 'com.android.support:palette-v7:22.0.0'
   compile 'com.squareup.dagger:dagger:1.2.2'
   provided('com.squareup.dagger:dagger-compiler:1.2.2') {
     exclude group: 'com.google.guava'
