--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,16 +13,14 @@ android {
 dependencies {
   compile 'com.google.android.gms:play-services-base:7.0.0'
   compile 'com.google.android.gms:play-services-analytics:7.0.0'
-  compile 'com.android.support:appcompat-v7:22.0.0'
-  compile 'com.android.support:recyclerview-v7:22.0.0'
-  compile 'com.android.support:cardview-v7:22.0.0'
+  compile 'com.android.support:appcompat-v7:22.1.0'
+  compile 'com.android.support:recyclerview-v7:22.1.0'
+  compile 'com.android.support:cardview-v7:22.1.0'
   compile 'com.squareup.dagger:dagger:1.2.2'
-  provided('com.squareup.dagger:dagger-compiler:1.2.2') {
-    exclude group: 'com.google.guava'
-  }
+  provided('com.squareup.dagger:dagger-compiler:1.2.2') { exclude group: 'com.google.guava' }
   compile 'com.squareup.okhttp:okhttp:2.3.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
-  compile 'com.jakewharton.timber:timber:2.7.1'
+  compile 'com.jakewharton.timber:timber:3.0.1'
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'io.reactivex:rxandroid:0.24.0'
   compile 'io.reactivex:rxjava:1.0.9'
