--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+  }
+}
+
 apply plugin: 'com.android.library'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 22
@@ -16,8 +26,9 @@ dependencies {
   compile 'com.android.support:appcompat-v7:22.1.1'
   compile 'com.android.support:recyclerview-v7:22.1.1'
   compile 'com.android.support:cardview-v7:22.1.1'
-  compile 'com.squareup.dagger:dagger:1.2.2'
-  provided('com.squareup.dagger:dagger-compiler:1.2.2') { exclude group: 'com.google.guava' }
+  compile 'com.google.dagger:dagger:2.0'
+  apt 'com.google.dagger:dagger-compiler:2.0'
+  compile 'javax.annotation:javax.annotation-api:1.2'
   compile 'com.squareup.okhttp:okhttp:2.3.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.jakewharton.timber:timber:3.1.0'
@@ -28,3 +39,4 @@ dependencies {
   compile 'net.tribe7.seeds:seeds-primitives:16.0.1'
   compile 'net.tribe7.seeds:seeds-strings:16.0.1'
 }
+
