--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -4,11 +4,18 @@ buildscript {
   }
   dependencies {
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
   }
 }
 
+group = 'co.mkry'
+version = '1.0.0'
+
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
 android {
   compileSdkVersion 22
@@ -29,14 +36,40 @@ dependencies {
   compile 'com.google.dagger:dagger:2.0'
   apt 'com.google.dagger:dagger-compiler:2.0'
   compile 'javax.annotation:javax.annotation-api:1.2'
-  compile 'com.squareup.okhttp:okhttp:2.3.0'
+  compile 'com.squareup.okhttp:okhttp:2.4.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.jakewharton.timber:timber:3.1.0'
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'io.reactivex:rxandroid:0.24.0'
-  compile 'io.reactivex:rxjava:1.0.10'
+  compile 'io.reactivex:rxjava:1.0.11'
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'net.tribe7.seeds:seeds-primitives:16.0.1'
   compile 'net.tribe7.seeds:seeds-strings:16.0.1'
 }
 
+def siteUrl = 'https://github.com/themakery/droid-bootstrap'
+def gitUrl = 'https://github.com/themakery/droid-bootstrap.git'
+
+bintray {
+  user = bintrayUser
+  key = bintrayApiKey
+
+  configurations = ['archives']
+  pkg {
+    repo = 'android'
+    name = project.name
+    desc = 'Droid Bootstrap'
+    websiteUrl = siteUrl
+    vcsUrl = gitUrl
+    licenses = ['Apache-2.0']
+    publicDownloadNumbers = true
+  }
+}
+
+install {
+  repositories.mavenInstaller {
+    pom.project {
+      packaging 'aar'
+    }
+  }
+}
