--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group = 'co.mkry'
-version = '1.0.1'
+version = '1.0.2'
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
@@ -31,6 +31,7 @@ dependencies {
   compile 'com.google.android.gms:play-services-base:7.5.0'
   compile 'com.google.android.gms:play-services-analytics:7.5.0'
   compile 'com.android.support:appcompat-v7:22.2.0'
+  compile 'com.android.support:design:22.2.0'
   compile 'com.android.support:recyclerview-v7:22.2.0'
   compile 'com.android.support:cardview-v7:22.2.0'
   compile 'com.google.dagger:dagger:2.0'
