--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,10 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.0-beta4'
+    classpath 'com.android.tools.build:gradle:1.3.0'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
   }
 }
 
