--- a/droid-storage/build.gradle
+++ b/droid-storage/build.gradle
@@ -1,5 +1,5 @@
 group = 'co.mkry'
-version = '1.0.10'
+version = '1.0.0'
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
@@ -18,23 +18,10 @@ android {
 
 dependencies {
   apt 'com.google.dagger:dagger-compiler:2.0.1'
-  compile 'com.google.dagger:dagger:2.0.1'
-  compile 'com.google.android.gms:play-services-base:7.5.0'
-  compile 'com.google.android.gms:play-services-analytics:7.5.0'
-  compile 'com.android.support:appcompat-v7:22.2.1'
-  compile 'com.android.support:design:22.2.1'
-  compile 'com.android.support:recyclerview-v7:22.2.1'
-  compile 'com.android.support:cardview-v7:22.2.1'
-  compile 'javax.annotation:javax.annotation-api:1.2'
-  compile 'com.squareup.okhttp:okhttp:2.4.0'
-  compile 'com.squareup.picasso:picasso:2.5.2'
-  compile 'com.jakewharton.timber:timber:3.1.0'
-  compile 'com.jakewharton:butterknife:6.1.0'
-  compile 'io.reactivex:rxandroid:0.25.0'
-  compile 'io.reactivex:rxjava:1.0.13'
-  compile 'de.greenrobot:eventbus:2.4.0'
-  compile 'net.tribe7.seeds:seeds-primitives:16.0.1'
-  compile 'net.tribe7.seeds:seeds-strings:16.0.1'
+  compile project(':droid-bootstrap')
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.5.4'
+  compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.4'
+  compile 'com.couchbase.lite:couchbase-lite-android:1.1.0'
 }
 
 def siteUrl = 'https://github.com/themakery/droid-bootstrap'
@@ -49,7 +36,7 @@ if (hasProperty('bintrayUser')) {
     pkg {
       repo = 'android'
       name = project.name
-      desc = 'Droid Bootstrap'
+      desc = 'Droid Storage'
       websiteUrl = siteUrl
       vcsUrl = gitUrl
       licenses = ['Apache-2.0']
