--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.0'
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+    classpath "com.android.tools.build:gradle:1.3.1"
+    classpath "com.neenbedankt.gradle.plugins:android-apt:1.7"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1"
   }
 }
 
@@ -14,8 +14,12 @@ allprojects {
   repositories {
     jcenter()
   }
+
+  ext {
+    daggerVersion = "2.0.1"
+  }
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.4'
+  gradleVersion = "2.6"
 }
