--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:1.3.1"
-    classpath "com.neenbedankt.gradle.plugins:android-apt:1.7"
-    classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1"
+    classpath "com.android.tools.build:gradle:1.4.0-beta3"
   }
 }
 
@@ -14,12 +11,8 @@ allprojects {
   repositories {
     jcenter()
   }
-
-  ext {
-    daggerVersion = "2.0.1"
-  }
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "2.6"
+  gradleVersion = "2.7"
 }
