--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -1,5 +1,16 @@
 group = "co.mkry"
-version = "1.0.12"
+version = "1.0.14"
+
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1"
+  }
+}
 
 apply plugin: "com.android.library"
 apply plugin: "com.neenbedankt.android-apt"
@@ -7,19 +18,20 @@ apply plugin: "com.github.dcendents.android-maven"
 apply plugin: "com.jfrog.bintray"
 
 android {
-  compileSdkVersion 22
-  buildToolsVersion "23.0.0 rc3"
+  compileSdkVersion 23
+  buildToolsVersion "23.0.0"
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 22
+    minSdkVersion 14
+    targetSdkVersion 23
   }
 }
 
 ext {
-  supportLibVersion = "22.2.1"
-  playServicesVersion = "7.8.0"
-  rxlifecycleVersion = "0.1.0"
+  daggerVersion = "2.0.1"
+  supportLibVersion = "23.0.1"
+  playServicesVersion = "8.1.0"
+  rxlifecycleVersion = "0.3.0"
   seedsVersion = "16.0.1"
 }
 
@@ -37,7 +49,7 @@ dependencies {
   compile "com.trello:rxlifecycle:${rxlifecycleVersion}"
   compile "com.trello:rxlifecycle-components:${rxlifecycleVersion}"
   compile "javax.annotation:javax.annotation-api:1.2"
-  compile "com.squareup.okhttp:okhttp:2.4.0"
+  compile "com.squareup.okhttp:okhttp:2.5.0"
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton.timber:timber:3.1.0"
   compile "com.jakewharton:butterknife:7.0.1"
