--- a/droid-storage/build.gradle
+++ b/droid-storage/build.gradle
@@ -1,5 +1,16 @@
 group = "co.mkry"
-version = "1.0.2"
+version = "1.0.4"
+
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1"
+  }
+}
 
 apply plugin: "com.android.library"
 apply plugin: "com.neenbedankt.android-apt"
@@ -7,17 +18,18 @@ apply plugin: "com.github.dcendents.android-maven"
 apply plugin: "com.jfrog.bintray"
 
 android {
-  compileSdkVersion 22
-  buildToolsVersion "23.0.0 rc3"
+  compileSdkVersion 23
+  buildToolsVersion "23.0.0"
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 22
+    minSdkVersion 14
+    targetSdkVersion 23
   }
 }
 
 ext {
-  jacksonVersion = "2.6.1"
+  daggerVersion = "2.0.1"
+  jacksonVersion = "2.6.2"
 }
 
 dependencies {
