--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:1.5.0-beta3"
+    classpath "com.android.tools.build:gradle:2.0.0-alpha1"
   }
 }
 
@@ -14,5 +14,5 @@ allprojects {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "2.8"
+  gradleVersion = "2.9"
 }
