--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -1,5 +1,5 @@
 group = "co.mkry"
-version = "1.0.18"
+version = "1.1.0"
 
 buildscript {
   repositories {
@@ -19,7 +19,7 @@ apply plugin: "com.jfrog.bintray"
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+  buildToolsVersion "24.0.0 rc1"
 
   defaultConfig {
     minSdkVersion 15
@@ -28,10 +28,10 @@ android {
 }
 
 ext {
-  daggerVersion = "2.0.2"
-  supportLibVersion = "23.1.1"
+  daggerVersion = "2.2"
+  supportLibVersion = "23.3.0"
   playServicesVersion = "8.4.0"
-  rxlifecycleVersion = "0.4.0"
+  rxlifecycleVersion = "0.5.0"
   seedsVersion = "16.0.1"
 }
 
@@ -49,13 +49,13 @@ dependencies {
   compile "com.trello:rxlifecycle:${rxlifecycleVersion}"
   compile "com.trello:rxlifecycle-components:${rxlifecycleVersion}"
   compile "javax.annotation:javax.annotation-api:1.2"
-  compile "com.squareup.okhttp3:okhttp:3.0.1"
+  compile "com.squareup.okhttp3:okhttp:3.2.0"
   compile "com.squareup.picasso:picasso:2.5.2"
-  compile "com.jakewharton.timber:timber:4.1.0"
+  compile "com.jakewharton.timber:timber:4.1.2"
   compile "com.jakewharton:butterknife:7.0.1"
   compile "io.reactivex:rxandroid:1.1.0"
-  compile "io.reactivex:rxjava:1.1.0"
-  compile "de.greenrobot:eventbus:2.4.0"
+  compile "io.reactivex:rxjava:1.1.3"
+  compile "de.greenrobot:eventbus:2.4.1"
 }
 
 def siteUrl = "https://github.com/themakery/droid-bootstrap"
