--- a/droid-storage/build.gradle
+++ b/droid-storage/build.gradle
@@ -1,5 +1,5 @@
 group = "co.mkry"
-version = "1.0.8"
+version = "1.1.0"
 
 buildscript {
   repositories {
@@ -8,7 +8,7 @@ buildscript {
   dependencies {
     classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
     classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
   }
 }
 
@@ -19,7 +19,7 @@ apply plugin: "com.jfrog.bintray"
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+  buildToolsVersion "24.0.0 rc1"
 
   defaultConfig {
     minSdkVersion 15
@@ -28,8 +28,8 @@ android {
 }
 
 ext {
-  daggerVersion = "2.0.2"
-  jacksonVersion = "2.7.0"
+  daggerVersion = "2.2"
+  jacksonVersion = "2.7.3"
 }
 
 dependencies {
@@ -37,7 +37,7 @@ dependencies {
   compile project(":droid-bootstrap")
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
   compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-  compile "com.couchbase.lite:couchbase-lite-android:1.1.0"
+  compile "com.couchbase.lite:couchbase-lite-android:1.2.0"
 }
 
 def siteUrl = "https://github.com/themakery/droid-bootstrap"
