--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -1,5 +1,5 @@
 group = "co.mkry"
-version = "1.1.0"
+version = "1.2.0"
 
 buildscript {
   repositories {
@@ -8,7 +8,7 @@ buildscript {
   dependencies {
     classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
     classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
   }
 }
 
@@ -28,10 +28,10 @@ android {
 }
 
 ext {
-  daggerVersion = "2.2"
-  supportLibVersion = "23.3.0"
-  playServicesVersion = "8.4.0"
-  rxlifecycleVersion = "0.5.0"
+  daggerVersion = "2.4"
+  supportLibVersion = "23.4.0"
+  playServicesVersion = "9.0.2"
+  rxlifecycleVersion = "0.6.1"
   seedsVersion = "16.0.1"
 }
 
@@ -49,13 +49,13 @@ dependencies {
   compile "com.trello:rxlifecycle:${rxlifecycleVersion}"
   compile "com.trello:rxlifecycle-components:${rxlifecycleVersion}"
   compile "javax.annotation:javax.annotation-api:1.2"
-  compile "com.squareup.okhttp3:okhttp:3.2.0"
+  compile "com.squareup.okhttp3:okhttp:3.3.1"
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton.timber:timber:4.1.2"
-  compile "com.jakewharton:butterknife:7.0.1"
-  compile "io.reactivex:rxandroid:1.1.0"
-  compile "io.reactivex:rxjava:1.1.3"
-  compile "de.greenrobot:eventbus:2.4.1"
+  compile "com.jakewharton:butterknife:8.0.1"
+  compile "io.reactivex:rxandroid:1.2.0"
+  compile "io.reactivex:rxjava:1.1.5"
+  compile "org.greenrobot:eventbus:3.0.0"
 }
 
 def siteUrl = "https://github.com/themakery/droid-bootstrap"
