--- a/droid-storage/build.gradle
+++ b/droid-storage/build.gradle
@@ -1,35 +1,37 @@
-group = "co.mkry"
-version = "1.2.0"
-
 buildscript {
   repositories {
     jcenter()
   }
   dependencies {
     classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
-    classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:1.4"
   }
 }
+
+plugins {
+  id "com.jfrog.bintray" version "1.5"
+}
+
+group = "co.mkry"
+version = "1.2.1"
 
 apply plugin: "com.android.library"
 apply plugin: "com.neenbedankt.android-apt"
 apply plugin: "com.github.dcendents.android-maven"
-apply plugin: "com.jfrog.bintray"
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "24.0.0 rc1"
+  compileSdkVersion 24
+  buildToolsVersion "24.0.0"
 
   defaultConfig {
     minSdkVersion 15
-    targetSdkVersion 23
+    targetSdkVersion 24
   }
 }
 
 ext {
-  daggerVersion = "2.4"
-  jacksonVersion = "2.7.4"
+  daggerVersion = "2.5"
+  jacksonVersion = "2.7.5"
 }
 
 dependencies {
