--- a/droid-bootstrap/build.gradle
+++ b/droid-bootstrap/build.gradle
@@ -3,7 +3,6 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
     classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
   }
 }
@@ -16,12 +15,11 @@ group = "co.mkry"
 version = "1.3.0"
 
 apply plugin: "com.android.library"
-apply plugin: "com.neenbedankt.android-apt"
 apply plugin: "com.github.dcendents.android-maven"
 
 android {
   compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  buildToolsVersion "25.0.3"
 
   defaultConfig {
     minSdkVersion 15
@@ -30,15 +28,15 @@ android {
 }
 
 ext {
-  daggerVersion = "2.7"
-  supportLibVersion = "25.0.0"
-  playServicesVersion = "9.8.0"
+  daggerVersion = "2.10"
+  supportLibVersion = "25.3.1"
+  playServicesVersion = "10.2.4"
   rxlifecycleVersion = "1.0"
   seedsVersion = "16.0.1"
 }
 
 dependencies {
-  apt "com.google.dagger:dagger-compiler:${daggerVersion}"
+  annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
   compile "com.google.dagger:dagger:${daggerVersion}"
   compile "com.google.android.gms:play-services-base:${playServicesVersion}"
   compile "com.google.android.gms:play-services-analytics:${playServicesVersion}"
@@ -51,33 +49,31 @@ dependencies {
   compile "com.trello:rxlifecycle:${rxlifecycleVersion}"
   compile "com.trello:rxlifecycle-components:${rxlifecycleVersion}"
   compile "javax.annotation:javax.annotation-api:1.2"
-  compile "com.squareup.okhttp3:okhttp:3.4.2"
+  compile "com.squareup.okhttp3:okhttp:3.8.0"
   compile "com.squareup.picasso:picasso:2.5.2"
-  compile "com.jakewharton.timber:timber:4.3.1"
-  compile "com.jakewharton:butterknife:8.4.0"
+  compile "com.jakewharton.timber:timber:4.5.1"
+  compile "com.jakewharton:butterknife:8.6.0"
   compile "io.reactivex:rxandroid:1.2.1"
-  compile "io.reactivex:rxjava:1.2.2"
+  compile "io.reactivex:rxjava:1.3.0"
   compile "org.greenrobot:eventbus:3.0.0"
 }
 
 def siteUrl = "https://github.com/themakery/droid-bootstrap"
 def gitUrl = "https://github.com/themakery/droid-bootstrap.git"
 
-if (hasProperty("bintrayUser")) {
-  bintray {
-    user = bintrayUser
-    key = bintrayApiKey
+bintray {
+  user = "themakery"
+  key = themakeryApiKey
 
-    configurations = ["archives"]
-    pkg {
-      repo = "android"
-      name = project.name
-      desc = "Droid Bootstrap"
-      websiteUrl = siteUrl
-      vcsUrl = gitUrl
-      licenses = ["Apache-2.0"]
-      publicDownloadNumbers = true
-    }
+  configurations = ["archives"]
+  pkg {
+    repo = "android"
+    name = project.name
+    desc = "Droid Bootstrap"
+    websiteUrl = siteUrl
+    vcsUrl = gitUrl
+    licenses = ["Apache-2.0"]
+    publicDownloadNumbers = true
   }
 }
 
