--- a/droid-storage/build.gradle
+++ b/droid-storage/build.gradle
@@ -3,8 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
-    classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
   }
 }
 
@@ -16,12 +15,11 @@ group = "co.mkry"
 version = "1.3.0"
 
 apply plugin: "com.android.library"
-apply plugin: "com.neenbedankt.android-apt"
 apply plugin: "com.github.dcendents.android-maven"
 
 android {
   compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  buildToolsVersion "25.0.3"
 
   defaultConfig {
     minSdkVersion 15
@@ -30,36 +28,34 @@ android {
 }
 
 ext {
-  daggerVersion = "2.7"
-  jacksonVersion = "2.8.4"
+  daggerVersion = "2.10"
+  jacksonVersion = "2.8.8"
 }
 
 dependencies {
-  apt "com.google.dagger:dagger-compiler:${daggerVersion}"
+  annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
   compile project(":droid-bootstrap")
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
   compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-  compile "com.couchbase.lite:couchbase-lite-android:1.3.1"
+  compile "com.couchbase.lite:couchbase-lite-android:1.4.0"
 }
 
 def siteUrl = "https://github.com/themakery/droid-bootstrap"
 def gitUrl = "https://github.com/themakery/droid-bootstrap.git"
 
-if (hasProperty("bintrayUser")) {
-  bintray {
-    user = bintrayUser
-    key = bintrayApiKey
+bintray {
+  user = "themakery"
+  key = themakeryApiKey
 
-    configurations = ["archives"]
-    pkg {
-      repo = "android"
-      name = project.name
-      desc = "Droid Storage"
-      websiteUrl = siteUrl
-      vcsUrl = gitUrl
-      licenses = ["Apache-2.0"]
-      publicDownloadNumbers = true
-    }
+  configurations = ["archives"]
+  pkg {
+    repo = "android"
+    name = project.name
+    desc = "Droid Storage"
+    websiteUrl = siteUrl
+    vcsUrl = gitUrl
+    licenses = ["Apache-2.0"]
+    publicDownloadNumbers = true
   }
 }
 
